--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,22 @@ set(this Art)
 
 project(${this} CXX)
 
+# raylib
+
+include(FetchContent)
+
+set(RAYLIB_VERSION 5.5)
+
+FetchContent_Declare(
+    raylib
+    URL https://github.com/raysan5/raylib/archive/refs/tags/${RAYLIB_VERSION}.tar.gz
+    FIND_PACKAGE_ARGS ${RAYLIB_VERSION}
+)
+set(BUILD_EXAMPLES OFF CACHE INTERNAL "")
+FetchContent_MakeAvailable(raylib) 
+
+# project 
+
 set(CMAKE_CXX_STANDARD 20)
 
 enable_testing()
@@ -18,6 +34,9 @@ set(headers
 
 )
 
-add_library(${this} STATIC ${sources})
+add_executable(main ${sources})
+target_link_libraries(main raylib)
+
+add_library(Art_lib STATIC ${sources})
 
 add_subdirectory(test)
