--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,16 +4,20 @@ set (this tests)
 
 set (sources 
    tests.cpp
+   ../cell.cpp
 )
 
 add_executable(${this} ${sources})
 
- target_link_libraries(${this} PUBLIC
-    gtest_main
-    Art_lib
- )
+target_link_libraries(${this} PUBLIC
+   gtest
+   gtest_main
+   Art_lib
+   raylib
+)
 
- add_test(
+
+add_test(
    NAME ${this}
    COMMAND ${this} --gtest_color=1
- )
+)
